# ffs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devbox.json  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/go/: basic.go  evaluation.go
examples/rust/: basic.rs
examples/typescript/: basic.ts  evaluation.ts
rules/: go.scm  go.txt  rust.scm  typescript.scm
src/: lib.rs  main.rs  scanner.rs
src/ffs/: mod.rs  query.rs  scanner.rs  writer.rs
src/types/: args.rs  flag.rs  language.rs  location.rs  mod.rs  token.rs
tests/: integration_test.rs
