[package]
name = "ffs"
version = "0.1.0"
description =  "A CLI tool to find Flipt feature flags in code"
edition = "2021"
authors = ["Flipt Dev <dev@flipt.io>"]
homepage = "https://github.com/flipt-io/ffs"
repository = "https://github.com/flipt-io/ffs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
human-panic = "1.1.3"
serde = "1.0.159"
serde_json = "1.0.95"
tree-sitter = "0.20.9"
tree-sitter-go = "0.19.1"
tree-sitter-rust = "0.20.3"
