[package]
name = "ffs"
version = "0.0.14"
description =  "A CLI tool to find Flipt feature flags in code"
edition = "2021"
authors = ["Flipt Dev <dev@flipt.io>"]
homepage = "https://github.com/flipt-io/ffs"
repository = "https://github.com/flipt-io/ffs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.0", features = ["derive"] }
flipt = "0.4.4"
futures = "0.3.28"
human-panic = "1.1.3"
rust-embed = "6.6.1"
serde = "1.0.159"
serde_json = "1.0.95"
snailquote = "0.3.1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.20.9"
tree-sitter-go = "0.19.1"
tree-sitter-rust = "0.20.3"
walkdir = "2.3.3"
colored = "2"
