[package]
name = "ffs"
version = "0.0.20"
description = "A CLI tool to find Flipt feature flags in code"
edition = "2021"
authors = ["Flipt Dev <dev@flipt.io>"]
homepage = "https://github.com/flipt-io/ffs"
repository = "https://github.com/flipt-io/ffs"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.2.0", features = ["derive"] }
human-panic = "1.2.0"
rust-embed = "8.0.0"
serde = "1.0.159"
serde_json = "1.0.106"
snailquote = "0.3.1"
tree-sitter = "0.20.10"
tree-sitter-go = "0.19.1"
tree-sitter-typescript = "0.20.2"
tree-sitter-rust = "0.20.4"
walkdir = "2.4.0"
colored = "2"
